fix(landing page): problema de overflow da landing page resolvido

--- a/public/css/landingpage.css
+++ b/public/css/landingpage.css
@@ -60,6 +60,7 @@ html, .tudolanding {
     background-attachment: fixed;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 .tdtitulo{
